--- a/CSS/CV-Style.css
+++ b/CSS/CV-Style.css
@@ -300,7 +300,7 @@ a {
   
 }
 
-.master-description {
+.Master-description {
   display: flex;
   flex-direction: column;
   justify-content: center;
