footer width adjusted on CS-Style.css

--- a/CSS/CV-Style.css
+++ b/CSS/CV-Style.css
@@ -736,7 +736,7 @@ html {
   display: flex;
   flex-direction: column;
   position:relative;
-  width: 100%;
+  width: auto;
   height: auto;
   margin-top: auto;
   color: #333;
