--- a/CSS/Projects-Style.css
+++ b/CSS/Projects-Style.css
@@ -196,7 +196,7 @@ a {
     justify-content: center;
     align-items: center;
     text-align: center;
-    width: 100%;
+    width: auto;
     height: auto;
     padding: 1%;
   }
@@ -462,7 +462,7 @@ a {
     display: flex;
     flex-direction: column;
     position:relative;
-    width: 100%;
+    width: auto;
     height: auto;
     margin-top: auto;
     color: #333;
