CS-Style.scss created & Project-Style updated

--- a/scss/Project-Style.scss
+++ b/scss/Project-Style.scss
@@ -297,7 +297,7 @@ a {
   justify-content: center;
   align-items: center;
   margin: 2% auto;
-  max-width: 100%;
+  max-width: auto;
 
   img {
     width: 100%;
