--- a/scss/CV-Style.scss
+++ b/scss/CV-Style.scss
@@ -1,4 +1,3 @@
-/* Variabili */
 $font-stack: 'Montserrat', sans-serif;
 $bg-dark: #212121;
 $link-color: #801023;
@@ -21,7 +20,6 @@ $card-bg: #4f5051;
 $tag-bg: #6d0000;
 $scrollbar-color: #b22424;
 
-/* Reset */
 * {
   font-family: $font-stack;
 }
@@ -33,7 +31,6 @@ a {
   color: $link-color;
 }
 
-/* Header */
 .header {
   background-color: $header-bg;
   box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.2);
@@ -156,7 +153,6 @@ a {
   }
 }
 
-/* Scrollbar */
 ::-webkit-scrollbar {
   height: 8px;
 }
@@ -172,7 +168,6 @@ a {
   }
 }
 
-/* Hero Section */
 .hero {
   background-color: $hero-bg;
   padding: 80px 20px;
@@ -203,7 +198,6 @@ a {
   }
 }
 
-/* About Section */
 .about {
   padding: 60px 20px;
   color: white;
@@ -220,7 +214,9 @@ a {
   }
 }
 
-
+.CV-Page-title {
+    width: auto;
+}
 .skills {
   background-color: $bg-dark;
   padding: 60px 20px;
