--- a/scss/CV-Style.css
+++ b/scss/CV-Style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   font-family: "Montserrat", sans-serif;
 }
@@ -175,8 +174,11 @@ a {
   margin: 0 auto;
 }
 
-.CV-Page-title  {
+.CV-Page-title {
   width: auto;
+  max-width: 100%;
+  overflow-x: hidden;
+  box-sizing: border-box;
 }
 
 .skills {
