--- a/scss/CV-Style.scss
+++ b/scss/CV-Style.scss
@@ -1,339 +1,556 @@
-$font-stack: 'Montserrat', sans-serif;
-$bg-dark: #212121;
-$link-color: #801023;
-$header-bg: #050505;
-$container-bg: #373c37;
-$menu-bg: #a7a8a7;
-$hover-bg: #292929;
-$nav-icon: #808080;
-$nav-icon-hover: gray;
-$hero-bg: rgba(132, 134, 135, 0.467);
-$skills-bar-bg: #02525bc1;
-$skills-bar-front: #ffcc33;
-$skills-bar-back: #a6cfe3;
-$skills-bar-color: #f3565b;
-$btn-bg: #ffffff;
-$btn-text: #6d0000;
-$footer-bg: #f2f2f2;
-$footer-color: #333;
-$card-bg: #4f5051;
-$tag-bg: #6d0000;
-$scrollbar-color: #b22424;
+@use '/scss/style.scss';
 
-* {
-  font-family: $font-stack;
-}
-body {
-  margin: 0;
-  background-color: $bg-dark;
-}
-a {
-  color: $link-color;
-}
-
-.header {
-  background-color: $header-bg;
-  box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.2);
-  position: fixed;
-  width: 100%;
-  z-index: 100;
-  top: 0;
-
-  .container-logo {
-    position: relative;
-    margin-top: 5%;
-    background-color: $container-bg;
-    width: 100%;
-    text-align: center;
-  }
-
-  ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    text-decoration: none;
-    overflow: hidden;
-    background-color: $menu-bg;
-
-    a {
-      display: block;
-      padding: 20px;
-      text-decoration: none;
-
-      &:hover {
-        background-color: $hover-bg;
-      }
-    }
-  }
-
-  .logo {
-    float: left;
-    font-size: 10px;
-    text-align: center;
-    padding: 10px 20px;
-  }
-
-  .menu {
-    clear: both;
-    max-height: 0;
-    transition: max-height .5s ease-out;
-  }
-
-  .menu-icon {
-    padding: 28px 20px;
-    position: relative;
-    float: right;
-    cursor: pointer;
-
-    .nav-icon {
-      background-color: $nav-icon;
-      display: block;
-      width: 18px;
-      height: 2px;
-      position: relative;
-      transition: background-color .5s ease-out;
-
-      &::before,
-      &::after {
-        background-color: $nav-icon-hover;
-        content: "";
-        display: block;
-        height: 100%;
-        width: 100%;
-        transition: all .5s ease-out;
-        position: absolute;
-      }
-      &::before {
-        top: 5px;
-      }
-      &::after {
-        top: -5px;
-      }
-    }
-  }
-
-  .menu-btn {
-    display: none;
-
-    &:checked ~ .menu {
-      max-height: 250px;
-    }
-
-    &:checked ~ .menu-icon .nav-icon {
-      background-color: transparent;
-
-      &::before {
-        transform: rotate(-45deg);
-        top: 0;
-      }
-      &::after {
-        transform: rotate(45deg);
-        top: 0;
-      }
-    }
-  }
-
-  @media (min-width: 48em) {
-    li {
-      float: left;
-
-      a {
-        padding: 20px 30px;
-      }
-    }
-    .menu {
-      clear: none;
-      float: right;
-      max-height: none !important;
-      display: block;
-    }
-    .menu-icon {
-      display: none;
-    }
-  }
+html {
+  scroll-behavior: smooth;
 }
 
 ::-webkit-scrollbar {
   height: 8px;
-}
-::-webkit-scrollbar-track {
-  background: $scrollbar-color;
-  border-radius: 25px;
-}
-::-webkit-scrollbar-thumb {
-  background: $scrollbar-color;
-  border-radius: 25px;
-  &:hover {
-    background: $scrollbar-color;
-  }
-}
 
-.hero {
-  background-color: $hero-bg;
-  padding: 80px 20px;
-  text-align: center;
-  color: white;
-
-  h1 {
-    font-size: 3em;
-    margin: 0.5em 0;
+  &-track {
+    background: #b22424;
+    border-radius: 25px;
   }
 
-  p {
-    font-size: 1.2em;
-    margin-bottom: 1em;
-  }
-
-  .btn {
-    background-color: $btn-bg;
-    color: $btn-text;
-    padding: 10px 20px;
-    border: none;
-    cursor: pointer;
-    transition: background-color 0.3s;
+  &-thumb {
+    background: #b22424;
+    border-radius: 25px;
 
     &:hover {
-      background-color: darken($btn-bg, 10%);
+      background: #b22424;
     }
   }
 }
 
-.about {
-  padding: 60px 20px;
-  color: white;
-  background-color: $bg-dark;
+.CV-hero-container {
+  padding: 1%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  height: auto;
+  border-radius: 5px;
+}
 
-  h2 {
-    text-align: center;
-    margin-bottom: 40px;
-  }
-
-  .content {
-    max-width: 900px;
-    margin: 0 auto;
-  }
+.wrap-education-hero {
+  width: 100%;
+  height: auto;
+  margin-top: 200%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  justify-content: flex-start;
+  text-align: left;
+  transition: transform 0.5s;
+  color: #a7a8a7;
+  font-size: 30px;
 }
 
 .CV-Page-title {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  position: relative;
+  width: auto;
+  height: auto;
+  margin-top: 1%;
+  text-align: left;
+}
+
+.CV-hero-master {
+  background-color: rgba(132, 134, 135, 0.467);
+  display: flex;
+  height: auto;
+  flex-direction: column;
+  justify-content: left;
+  text-align: left;
+  align-items: flex-start;
+  padding: 1%;
+  margin: 1%;
+  border-radius: 5px;
+
+  @media screen and (min-width: 650px) {
+    display: block;
+    height: fit-content;
+    margin: 1%;
+    padding: 1%;
+    position: relative;
+    justify-content: left;
+    text-align: left;
+    transition: transform 0.5s;
+  }
+}
+
+.hero-logo {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: flex-start;
+  position: relative;
+  width: 15%;
+  height: auto;
+  margin: 1%;
+  padding: 1%;
+}
+
+.macbook-wrapper-container {
+  position: relative;
+  width: fit-content;
+  height: fit-content;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 5%;
+  padding: 1%;
+  align-items: center;
+  text-align: center;
+
+  .macbook-wrapper {
+    position: relative;
+    width: 80%;
+    height: auto;
+
+    .macbook-img {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+
+    .gif-overlay {
+      position: absolute;
+      top: 3%;
+      left: 10%;
+      width: 80%;
+      height: auto;
+      border-radius: 5px;
+      pointer-events: none;
+    }
+
+    &:hover .gif-overlay {
+      opacity: 1;
+      z-index: 4;
+      box-shadow: 0 0 10px #000;
+    }
+  }
+}
+
+.start2Impact-container {
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: left;
+  position: relative;
+  margin: 1%;
+  padding: 5%;
+  width: 100%;
+  height: fit-content;
+
+  @media screen and (min-width: 650px) {
+    flex-direction: column;
+    align-items: flex-start;
     width: auto;
-    max-width: 100%;
-    overflow-x: hidden;
-    box-sizing: border-box;
+    height: fit-content;
+    margin: 1%;
+    padding: 1%;
   }
-  
-.skills {
-  background-color: $bg-dark;
-  padding: 60px 20px;
-  color: white;
+}
+
+.institute-title {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  position: relative;
+  width: 100%;
+  height: auto;
+  font-size: larger;
+
+  @media screen and (min-width: 650px) {
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    height: auto;
+    margin: 1%;
+    padding: 1%;
+    position: relative;
+    justify-content: center;
+    text-align: left;
+    transition: transform 0.5s;
+  }
+}
+
+.Master-description {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: fit-content;
+  height: auto;
+}
+
+.University-logo {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: fit-content;
+  height: auto;
+  margin: 1%;
+  padding: 1%;
 
   h2 {
-    text-align: center;
-    margin-bottom: 40px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #fff;
+    width: fit-content;
   }
 
-  .skill {
-    margin-bottom: 20px;
+  @media screen and (max-width: 650px) {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: fit-content;
+    margin: 1%;
+    padding: 1%;
+    position: relative;
+    justify-content: center;
+    text-align: center;
+    transition: transform 0.5s;
+  }
+}
 
-    .bar {
-      background-color: $skills-bar-back;
-      border-radius: 25px;
-      overflow: hidden;
+.Skills-container {
+  background-color: #373c37;
+  padding: 1%;
+  margin: 1%;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  align-items: flex-start;
+  position: relative;
+  height: fit-content;
+  border-radius: 5px;
 
-      .progress {
-        background-color: $skills-bar-front;
-        height: 20px;
-        width: 0;
-        color: $skills-bar-color;
-        text-align: right;
-        padding-right: 10px;
-        transition: width 1s ease-in-out;
-      }
+  .skills-bars-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    position: relative;
+    width: 95%;
+    height: auto;
+    margin: 1%;
+    padding: 1%;
+    border-radius: 5px;
+
+    @media screen and (max-width: 400px) {
+      flex-direction: column;
+      align-items: flex-start;
+      order: 2;
+    }
+  }
+
+  .skills-bar {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    margin-right: 100px;
+    padding: 2%;
+    margin: 2%;
+  }
+
+  .skill-icon {
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+  }
+
+  .bar {
+    background-color: #02525bc1;
+    width: 100%;
+    padding: 3px;
+    margin: 1%;
+    position: relative;
+    overflow: hidden;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    height: 30px;
+    border-radius: 15px;
+    margin-bottom: 5px;
+    font-size: 14px;
+    color: #fff;
+    font-weight: bold;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+
+    &::before {
+      content: attr(data-skill);
+      background-color: #f3565b;
+      display: inline-block;
+      padding: 5px 0 5px 10px;
+      border-radius: inherit;
+      animation: load 4s 2s;
+    }
+
+    &.front::before {
+      background-color: #ffcc33;
+    }
+
+    &.back::before {
+      background-color: #a6cfe3;
+    }
+
+    &.learning::before {
+      width: calc(20% - 10px);
+    }
+
+    &.basic::before {
+      width: calc(40% - 10px);
+    }
+
+    &.intermediate::before {
+      width: calc(60% - 10px);
+    }
+
+    &.advanced::before {
+      width: calc(80% - 10px);
+    }
+
+    &.expert::before {
+      width: calc(100% - 10px);
     }
   }
 }
 
-.portfolio {
-  background-color: $bg-dark;
-  color: white;
-  padding: 60px 20px;
+.Skills_1-2,
+.Skills_2-2 {
+  background-color: #373c37;
+  padding: 1%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: left;
+  position: relative;
+  margin: 1%;
+  height: fit-content;
+  border-radius: 5px;
+  color: #fff;
+  width: 95%;
 
-  h2 {
+  @media screen and (min-width: 650px) {
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+    margin: 1%;
+    padding: 1%;
+    position: relative;
+    justify-content: center;
+    text-align: left;
+    transition: transform 0.5s;
+  }
+}
+
+.Skills_2-2 {
+  order: 1;
+}
+
+.my-projects {
+  display: flex;
+  flex-direction: row;
+  overflow-x: auto;
+  margin: 1%;
+  padding: 1%;
+  border-radius: 5px;
+  text-align: left;
+  background-color: #373c37;
+
+  @media screen and (max-width: 650px) {
+    flex-direction: column;
+    width: 96%;
+    height: fit-content;
+    margin: 1%;
+    padding: 1%;
+    position: relative;
+    justify-content: left;
     text-align: center;
-    margin-bottom: 40px;
+    transition: transform 0.5s;
   }
 
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
+  .projecct-img {
+    width: 25%;
+    height: auto;
+    margin-right: 10px;
+    padding: 1%;
+    transition: transform 0.5s;
+  }
+}
 
-    .card {
-      background-color: $card-bg;
-      padding: 20px;
-      border-radius: 10px;
+.my-projects-hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
-      h3 {
-        margin-top: 0;
-      }
+  &-img {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 1%;
+    padding: 1%;
+    transition: transform 0.5s;
 
-      .tags {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 5px;
-
-        span {
-          background-color: $tag-bg;
-          color: white;
-          padding: 5px 10px;
-          border-radius: 20px;
-          font-size: 0.8em;
-        }
-      }
+    @media screen and (max-width: 400px) {
+      width: fit-content;
+      height: auto;
+      margin-right: 1%;
+      padding: 1%;
+      display: flex;
+      flex-direction: column;
+      position: relative;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      transition: transform 0.5s;
     }
   }
 }
 
-.contact {
-  padding: 60px 20px;
-  color: white;
-  background-color: $bg-dark;
+.projects-btn,
+.btn-master {
+  background-color: #fff;
+  color: #6d0000;
+  padding: 5%;
+  margin: 1%;
+  border: 2px solid #6d0000;
+  box-shadow: rgba(109, 0, 0, 0.4) 0 0 0;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  transition: background-color 0.3s ease;
+  display: flex;
+  flex-direction: column;
 
-  h2 {
-    text-align: center;
-    margin-bottom: 40px;
+  &:hover {
+    background-color: #ffffff80;
+    display: block;
+  }
+}
+
+.card-container {
+  display: flex;
+  overflow-x: auto;
+  width: 100%;
+  gap: 1%;
+  padding: 0;
+  margin-left: 2%;
+  margin-right: 0;
+  box-sizing: border-box;
+  scroll-snap-type: x mandatory;
+
+  @media screen and (max-width: 650px) {
+    transform: scale(0.9);
+    flex-direction: row;
+    align-items: flex-start;
+    overflow-x: scroll;
+    width: 100%;
+  }
+}
+
+.card {
+  background-color: #4f5051;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 2%;
+  border-radius: 10px;
+  position: relative;
+  overflow: hidden;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  min-height: 400px;
+  width: fit-content;
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex: 0 0 auto;
+  min-width: 250px;
+  scroll-snap-align: start;
+
+  .image {
+    height: 150px;
+    width: 150px;
+    padding: 4px;
+    background: #fff;
+    border-radius: 50%;
+    align-items: center;
+
+    img {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+      border-radius: 50%;
+      border: 5px solid #6d0000;
+    }
   }
 
-  form {
-    max-width: 600px;
-    margin: 0 auto;
+  h2 {
+    margin-top: 25px;
+    color: #333;
+    font-size: 22px;
+    font-weight: 600;
+    padding: 1%;
+    margin: 1%;
+  }
+
+  .tag-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: flex-start;
+    margin: 1%;
+    width: fit-content;
+    height: fit-content;
+    position: relative;
+    padding: 1%;
+    margin-top: 1%;
+
+    h5 {
+      color: #fff;
+      font-weight: 800;
+      background-color: #6d0000;
+      padding: 1%;
+      margin: 1%;
+      border-radius: 5px;
+      width: fit-content;
+      height: fit-content;
+      text-align: center;
+    }
+  }
+
+  p {
+    margin-top: 4px;
+    font-size: 18px;
+    font-weight: 400;
+    color: #333;
+    text-align: center;
+    padding: 1%;
+    margin: 1%;
+  }
+
+  @media screen and (min-width: 920px) {
     display: flex;
     flex-direction: column;
-    gap: 15px;
-
-    input,
-    textarea {
-      padding: 10px;
-      border: none;
-      border-radius: 5px;
-    }
-
-    button {
-      background-color: $btn-bg;
-      color: $btn-text;
-      padding: 10px;
-      border: none;
-      cursor: pointer;
-
-      &:hover {
-        background-color: darken($btn-bg, 10%);
-      }
-    }
+    align-items: center;
+    flex: 0 0 10%;
+    width: 200px;
+    margin-bottom: 20px;
   }
-}
-
-footer {
-  background-color: $footer-bg;
-  color: $footer-color;
-  text-align: center;
-  padding: 20px;
 }
