--- a/scss/Contact-Me-Style.scss
+++ b/scss/Contact-Me-Style.scss
@@ -1,28 +1,126 @@
+@use '/scss/style.scss';
 
-$font-family: "Montserrat", sans-serif;
-$color-text: #a7a8a7;
-$color-primary: #801023;
-$color-background: #212121;
-$color-dark: #050505;
-$color-lightgray: #f2f2f2;
-$color-green: #25d366;
-$color-green-hover: #128c7e;
-$color-footer-hover: #373c37;
-$color-border: #60000d;
-$color-border-dark: #6d0000;
-$gray: #868585;
-
-* {
-  font-family: $font-family;
-  text-decoration: none;
-  list-style: none;
-  color: $color-text;
-}
-body {
-  margin: 0;
-  background-color: $color-background;
+.hero-img {
+  display: flex;
+  flex-direction: row;
+  width: 70%;
+  height: auto;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-a {
-  color: $color-primary;
+.whatsapp-button {
+  background-color: #25d366;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 400;
+  width: fit-content;
+  display: flex;
+  margin: 1%;
+  padding: 1%;
+  position: relative;
+  transition: background-color 0.3s, color 0.3s;
+
+  &:hover {
+    background-color: #128c7e;
+    color: white;
+  }
+}
+
+.privacy-policy {
+  font-size: 12px;
+  font-weight: bold;
+  color: #d2cbcc;
+  margin-top: 10px;
+  text-align: center;
+  display: flex;
+}
+
+.wrap-form-container {
+  display: flex;
+  flex-direction: row;
+
+  @media screen and (max-width: 400px) {
+    width: 100%;
+    margin-left: 0;
+    padding: 2%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #68666661;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    margin: 0 auto;
+    margin-top: 5%;
+    margin-bottom: 5%;
+  }
+}
+
+.container-form {
+  display: flex;
+  flex-direction: row;
+  justify-content: right;
+  padding: 1%;
+  background-color: #68666661;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  width: auto;
+  margin: 5%;
+}
+
+.form-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  align-items: flex-start;
+  padding: 3%;
+  border-radius: 5px;
+  width: 100%;
+  margin-left: 10%;
+}
+
+.field {
+  margin: 1%;
+  padding: 1%;
+
+  label {
+    display: block;
+    font-size: 12px;
+    font-weight: bold;
+    color: #868585;
+    margin-top: 1%;
+    padding: 1%;
+    text-align: left;
+  }
+
+  input {
+    display: block;
+    min-width: 250px;
+    line-height: 1.5;
+    font-size: 14px;
+    border: solid 2px #60000d;
+    border-radius: 5px;
+  }
+}
+
+.submit-btn {
+  display: flex;
+  padding: 6px 30px;
+  font-size: 14px;
+  background-color: #60000d;
+  color: #fff;
+  border-radius: 5px;
+  border: solid 2px #6d0000;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+
+  &:hover {
+    background-color: #006022;
+    color: #fff;
+  }
 }
