--- a/scss/Project-Style.scss
+++ b/scss/Project-Style.scss
@@ -1,200 +1,19 @@
-// Variabili globali
-$primary-color: #801023;
-$dark-bg: #212121;
-$light-bg: #f2f2f2;
-$header-bg: #050505;
-$hover-bg: #292929;
-$hover-color: #a7a8a7;
-$menu-bg: #a7a8a7;
-$nav-icon-color: #808080;
-$green: #006d35;
-$green-hover: #00cd78;
-$blue: #004a6d;
-$blue-hover: #0070cd;
-$red: #6d0000;
-$red-hover: #cd0000;
-$text-light: #edeaea;
-$box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.2);
-
-$font-main: 'Montserrat', sans-serif;
-$font-alt: Arial, Helvetica, sans-serif;
-
-// Reset & global
-* {
-  font-family: $font-main;
-  text-decoration: none;
-  list-style: none;
-  box-sizing: border-box;
-}
-
-body {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  margin: 0;
-  background-color: $dark-bg;
-}
-
-a {
-  color: $primary-color;
-}
-
-.header {
-  background-color: $header-bg;
-  box-shadow: $box-shadow;
-  position: fixed;
-  width: 100%;
-  z-index: 100;
-  top: 0;
-
-  .container-logo {
-    position: relative;
-    margin-top: 5%;
-    background-color: #373c37;
-    text-align: center;
-    width: 100%;
-  }
-
-  ul {
-    margin: 0;
-    padding: 0;
-    background-color: $menu-bg;
-
-    a {
-      display: block;
-      padding: 20px;
-
-      &:hover {
-        background-color: $hover-bg;
-        color: $hover-color;
-      }
-    }
-  }
-
-  .logo {
-    float: left;
-    font-size: 10px;
-    text-align: center;
-    padding: 10px 20px;
-  }
-
-  .menu {
-    clear: both;
-    max-height: 0;
-    transition: max-height 0.5s ease-out;
-  }
-
-  .menu-icon {
-    padding: 28px 20px;
-    float: right;
-    position: relative;
-    cursor: pointer;
-
-    .nav-icon {
-      background-color: $nav-icon-color;
-      display: block;
-      width: 18px;
-      height: 2px;
-      position: relative;
-      transition: background-color 0.5s ease-out;
-
-      &::before,
-      &::after {
-        background-color: $nav-icon-color;
-        content: "";
-        display: block;
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        transition: all 0.5s ease-out;
-      }
-
-      &::before {
-        top: 5px;
-      }
-
-      &::after {
-        top: -5px;
-      }
-    }
-  }
-
-  .menu-btn {
-    display: none;
-
-    &:checked {
-      ~ .menu {
-        max-height: 250px;
-      }
-
-      ~ .menu-icon .nav-icon {
-        background-color: transparent;
-
-        &::before {
-          transform: rotate(-45deg);
-          top: 0;
-        }
-
-        &::after {
-          transform: rotate(45deg);
-          top: 0;
-        }
-      }
-    }
-  }
-
-  @media (min-width: 48em) {
-    li {
-      float: left;
-    }
-
-    li a {
-      padding: 20px 30px;
-    }
-
-    .menu {
-      clear: none;
-      float: right;
-      max-height: none !important;
-      display: block;
-    }
-
-    .menu-icon {
-      display: none;
-    }
-  }
-}
-
-.a {
-  .logo {
-    text-decoration: none;
-    color: $primary-color;
-    font-size: 2rem;
-    font-weight: 700;
-    position: absolute;
-    top: 0;
-    left: 0;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    width: 100%;
-    height: 100%;
-  }
-}
+@use '/scss/style.scss';
 
 .CV-hero-master {
   background-color: rgba(132, 134, 135, 0.467);
   display: flex;
   flex-direction: row;
   width: 50%;
+  height: auto;
   justify-content: left;
-  align-items: center;
   text-align: left;
+  align-items: center;
   position: relative;
   padding: 1%;
   margin-top: 5%;
   border-radius: 5px;
-  font-family: $font-alt;
+  font-family: Arial, Helvetica, sans-serif;
 
   @media screen and (min-width: 400px) and (max-width: 800px) {
     width: 80%;
@@ -212,6 +31,8 @@ a {
   justify-content: center;
   align-items: center;
   text-align: center;
+  width: auto;
+  height: auto;
   padding: 1%;
 
   @media screen and (max-width: 650px) {
@@ -222,9 +43,9 @@ a {
 }
 
 .DEPYL-Landingpage-scrolling-preview {
-  height: 100%;
   position: relative;
   width: 65%;
+  height: auto;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -233,10 +54,10 @@ a {
 }
 
 .project-title {
-  font-family: $font-alt;
+  font-family: "Arial", sans-serif;
   font-size: 24px;
   font-weight: bold;
-  color: $text-light;
+  color: #edeaea;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
   margin-bottom: 10px;
 }
@@ -247,10 +68,10 @@ a {
   margin-bottom: 20px;
 
   h2 {
-    font-family: $font-alt;
+    font-family: "Arial, Helvetica, sans-serif";
     font-size: 20px;
     font-weight: bold;
-    color: $text-light; // fallback, as gradient on text requires extra work
+    color: linear-gradient(to right, #f3565b, #ffcc33);
   }
 }
 
@@ -265,61 +86,152 @@ a {
 }
 
 .Project-description {
+  width: auto;
+  height: auto;
   margin: 1%;
   padding: 1%;
+  list-style: none;
   display: flex;
   flex-direction: column;
   justify-content: left;
   align-items: center;
   text-align: left;
   font-size: 14px;
-  color: $text-light;
+  color: #edeaea;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
 }
 
-.next-project-btn {
-  background-color: $green;
-  color: $text-light;
-  border: none;
-  padding: 0.5em 1em;
-  border-radius: 5px;
-  cursor: pointer;
-  font-family: $font-main;
-  margin-top: 1em;
-
-  &:hover {
-    background-color: $green-hover;
-  }
-}
-
 .Green-Earth-preview {
+  position: relative;
+  width: 100%;
+  height: auto;
   display: flex;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: left;
   align-items: center;
-  margin: 2% auto;
-  max-width: auto;
+  margin-top: 1%;
+  padding: 1%;
 
-  img {
+  @media screen and (max-width: 650px) {
+    flex-direction: column;
+    align-items: center;
     width: 100%;
-    height: auto;
-    border-radius: 10px;
+    margin: 1%;
   }
 }
 
 .macbook-wrapper {
-  position: relative;
-  width: 100%;
-  padding-top: 56.25%; // 16:9 aspect ratio
-  background-color: #000;
-  border-radius: 10px;
-  overflow: hidden;
+  position: absolute;
+  top: 25%;
+  right: 1%;
+  width: 50%;
 
-  iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
+  @media screen and (max-width: 650px) {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    height: 100%;
-    border: none;
+    margin-top: 1%;
+    padding: 1%;
+  }
+
+  &:hover .gif-overlay {
+    opacity: 1;
+    z-index: 4;
+    box-shadow: 0 0 10px #000;
+  }
+}
+
+.iphone-wrapper {
+  position: relative;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  margin-left: 5%;
+}
+
+.macbook-img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.iphone-img {
+  width: auto;
+  height: 100%;
+  display: flex;
+}
+
+.gif-overlay {
+  position: relative;
+  display: block;
+  top: 3%;
+  left: 10%;
+  width: 80%;
+  height: auto;
+  border-radius: 10px;
+  pointer-events: none;
+
+  @media screen and (max-width: 400px) {
+    top: 17%;
+    left: 12%;
+    width: 76%;
+  }
+}
+
+.gif-green-earth-overlay {
+  position: absolute;
+  left: 5%;
+  width: 355px;
+  height: 700px;
+  top: 10%;
+  border-radius: 20px;
+  pointer-events: none;
+}
+
+%button-style {
+  color: white;
+  padding: 1%;
+  margin: 1%;
+  border-radius: 5px;
+  border: solid 1px #808080;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: var(--bs-body-line-height);
+  width: fit-content;
+}
+
+.next-project-btn {
+  @extend %button-style;
+  background-color: #006d35;
+
+  &:hover {
+    background-color: #00cd78;
+  }
+}
+
+.previous-project-btn {
+  @extend %button-style;
+  background-color: #004a6d;
+
+  &:hover {
+    background-color: #0070cd;
+  }
+}
+
+.go-back-btn,
+.back-button {
+  @extend %button-style;
+  background-color: #6d0000;
+  border: none;
+
+  &:hover,
+  &:active {
+    background-color: #cd0000;
   }
 }
