--- a/scss/pages/CV-Style.scss
+++ b/scss/pages/CV-Style.scss
@@ -1,54 +1,56 @@
-.CV-hero-container {
-    padding: 1%;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    height: auto;
-    border-radius: 5px;
-  }
-  
-  .wrap-education-hero {
-    width: 100%;
-    height: auto;
-    margin-top: 200%;
-    margin: 0;
-    padding: 0;
-    display:flex;
-    flex-direction: column;
-    position:relative;
-    justify-content: flex-start;
-    text-align: left;
-    transition: transform 0.5s;
-    color:#a7a8a7;
-    font-size:30px;
-  }
-  
-  
-  .CV-Page-title {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    position: relative;
-    width: auto;
-    height: auto;
-    margin-top: 1%;
-    text-align: left;
-  }
-  .CV-hero-master {
-    background-color: rgba(132, 134, 135, 0.467);
-    display: flex;
-    height: auto;
-    flex-direction: column;
-    justify-content: left;
-    text-align: left;
-    align-items: flex-start;
-    padding: 1%;
-    margin: 1%;
-    border-radius: 5px;
-  }
-  
+@forward "CV-Style";
+
+
+@mixin CV-hero-container {
+  padding: 1%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  height: auto;
+  border-radius: 5px;
+        
+@mixin wrap-education-hero {
+  width: 100%;
+  height: auto;
+  margin-top: 200%;
+  margin: 0;
+  padding: 0;
+  display:flex;
+  flex-direction: column;
+  position:relative;
+  justify-content: flex-start;
+  text-align: left;
+  transition: transform 0.5s;
+  color:#a7a8a7;
+  font-size:30px;
+}
+       
+@mixin CV-Page-title {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  position: relative;
+  width: auto;
+  height: auto;
+  margin-top: 1%;
+  text-align: left;
+}
+
+@mixin CV-hero-master {
+  background-color: rgba(132, 134, 135, 0.467);
+  display: flex;
+  height: auto;
+  flex-direction: column;
+  justify-content: left;
+  text-align: left;
+  align-items: flex-start;
+  padding: 1%;
+  margin: 1%;
+  border-radius: 5px;
+}
+
   @media screen and (min-width: 650px) {
     .CV-hero-master {
       display: block;
@@ -58,9 +60,9 @@
       position: relative;
       justify-content: left;
       text-align: left;
-      transition: transform 0.5s;
-    }
-  }
+      transition: transform 0.5s;}
+   }
+
   .hero-logo {
     display: flex;
     flex-direction: row;
@@ -83,20 +85,20 @@
     padding: 1%;
     align-items: center;
     text-align: center;
-   
   }
-  
+      
   .macbook-wrapper {
     position: relative;
     width: 80%;
     height:auto;
   }
-  
+      
   .macbook-img {
     width: 100%;
     height: auto;
     display: block;
   }
+
   .gif-overlay {
     position: absolute;
     top: 3%; 
@@ -106,12 +108,13 @@
     border-radius: 5px;
     pointer-events: none;
   }
+  
   .macbook-wrapper:hover .gif-overlay {
     opacity: 1;
     z-index: 4;
     box-shadow: 0 0 10px #000;
   }
-  
+        
   .start2Impact-container{
     display: inline-flex;
     flex-direction: row;
@@ -122,6 +125,7 @@
     width: 100%;
     height: fit-content;
   }
+
   @media screen and (min-width: 650px) {
     .start2Impact-container {
       flex-direction: column;
@@ -132,6 +136,7 @@
       padding:1%;
     }
   }
+
   .institute-title{
     display: flex;
     flex-direction: column;
@@ -154,9 +159,9 @@
       justify-content: center;
       text-align: left;
       transition: transform 0.5s;
+      }
     }
-  }
-  
+        
   .Master-description {
     display: flex;
     flex-direction: column;
@@ -165,7 +170,7 @@
     width: fit-content;
     height: auto; 
   }
-  
+        
   .University-logo {
     display: flex;
     flex-direction: row-reverse;
@@ -177,6 +182,7 @@
     margin: 1%;
     padding: 1%;
   }
+
   @media screen and (max-width: 650px) {
     .University-logo {
       flex-direction: column;
@@ -190,30 +196,29 @@
       text-align: center;
       transition: transform 0.5s;
     }
-    
   }
-  
+        
   .University-logo h2 {
     font-size: 20px;
     font-weight: bold;
     color: #fff;
     width:fit-content;
   }
-  
-  
+        
+        
   .Skills-container {
-      background-color: #373c37;
-      padding: 1%;
-      margin: 1%;
-      display: flex;
-      flex-direction: column;
-      justify-content: left;
-      align-items: flex-start;
-      position: relative;
-      height: fit-content;
-      border-radius: 5px;
+    background-color: #373c37;
+    padding: 1%;
+    margin: 1%;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    align-items: flex-start;
+    position: relative;
+    height: fit-content;
+    border-radius: 5px;
   }
-  
+        
   .skills-bars-container {
     display: flex;
     flex-direction: row;
@@ -224,19 +229,18 @@
     margin: 1%;
     padding: 1%;
     border-radius: 5px;
-  }
-  
-  
+  }     
+        
   @media screen and (max-width: 400px) {
     .skills-bars-container {
       flex-direction: column;
       align-items: flex-start;
     }
-  
     .skills-bars-container {
       order: 2; 
     }
   }
+
   .skills-bar {
     display: flex;
     justify-content: left;
@@ -247,20 +251,22 @@
     padding: 2%;
     margin: 2%;
   }
+
   .Skills_1-2, .Skills_2-2 {
-      background-color: #373c37;
-      padding: 1%;
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      justify-content: left;
-      position: relative;
-      margin: 1%;
-      height: fit-content;
-      border-radius: 5px;
-      color:#FFF;
-      width:95%;
+    background-color: #373c37;
+    padding: 1%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: left;
+    position: relative;
+    margin: 1%;
+    height: fit-content;
+    border-radius: 5px;
+    color:#FFF;
+    width:95%;
   }
+
   @media screen and (min-width: 650px) {
     .Skills_1-2, .Skills_2-2 {
       flex-direction: column;  
@@ -273,14 +279,12 @@
       text-align: left;
       transition: transform 0.5s;
     }
-    
   }
-  
+        
   .Skills_2-2 {
-      order: 1;
-    }
-    
-  
+    order: 1;
+  }
+          
   .skill-icon {
     width: 50px;
     height: 50px;
@@ -305,6 +309,7 @@
     font-weight: bold;
     text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
   }
+
   .bar::before{
     content:  attr(data-skill);
     background-color: #f3565b;
@@ -316,31 +321,35 @@
     -moz-animation: load 4s 2s;
     -o-animation: load 4s 2s;
   }
-  
+        
   .bar.front::before{
     background-color: #ffcc33;
   }
+
   .bar.back::before{
     background-color: #a6cfe3;
   }
-  
+
   .bar.learning::before{
     width: calc(20% - 10px);
   }
+
   .bar.basic::before{
     width: calc(40% - 10px);
   }
+
   .bar.intermediate::before{
     width: calc(60% - 10px);
   }
+
   .bar.advanced::before{
     width: calc(80% - 10px);
   }
+
   .bar.expert::before{
     width: calc(100% - 10px);
-  
   }
-  
+        
   .my-projects {
     display: flex;
     flex-direction: row; 
@@ -351,6 +360,7 @@
     text-align: left;
     background-color: #373c37;
   }
+
   @media screen and (max-width: 650px) {
     .my-projects {
       flex-direction: column;
@@ -362,8 +372,7 @@
       justify-content: left;
       text-align: center;
       transition: transform 0.5s;
-    }
-    
+    } 
   }
   .projecct-img {
     width: 25%;
@@ -372,12 +381,14 @@
     padding: 1%;
     transition: transform 0.5s;
   }  
+
   .my-projects-hero {
     display:flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
+
   .my-projects-hero-img {
     width: 100%;
     display: flex;
@@ -402,7 +413,7 @@
       transition: transform 0.5s;
     }
   }
-  
+        
   .projects-btn{
     background-color: #ffffff;
     width: fit-content;
@@ -422,6 +433,7 @@
     flex-direction: column;
     transition: background-color 0.3s ease; 
   }
+
   .btn-master{
     background-color: #ffffff;
     color: #6d0000;
@@ -437,28 +449,35 @@
     text-align: center;
     transition: background-color 0.3s ease; 
   }
+
   .btn-master:hover {
     background-color: #ffffff80;
     display:block;
   }
+
   html {
     scroll-behavior: smooth;
   }
+
   ::-webkit-scrollbar {
     height: 8px;
   }
+
   ::-webkit-scrollbar-track {
     background: #b22424;
     border-radius: 25px;
   }
+
   ::-webkit-scrollbar-thumb {
     background: #b22424;
     border-radius: 25px;
   }
+
   ::-webkit-scrollbar-thumb:hover {
     background: #b22424;
     ;
   }
+
   .card-container {
     display: flex;
     overflow-x: auto;
@@ -470,19 +489,19 @@
     box-sizing: border-box;
     scroll-snap-type: x mandatory;
   }
-    @media screen and (max-width: 650px) {
-      .card-container {
-        transform: scale(0.9);
-        display:flex;
-        flex-direction: row;
-        align-items: flex-start;
-        overflow-x: scroll;
-        width:100%;
-  
-      }
-    
+
+  @media screen and (max-width: 650px) {
+    .card-container {
+      transform: scale(0.9);
+      display:flex;
+      flex-direction: row;
+      align-items: flex-start;
+      overflow-x: scroll;
+      width:100%;
+
+    }
   }  
-  
+        
   .card {
     background-color: #4f5051;
     background-size: cover;
@@ -502,7 +521,7 @@
     min-width: 250px;
     scroll-snap-align: start;
   }
-  
+        
   .card .image {
     height: 150px;
     width: 150px;
@@ -511,6 +530,7 @@
     border-radius: 50%;
     align-items: center;
   }
+
   .tag-container {
     display: flex;
     flex-direction: row;
@@ -522,6 +542,7 @@
     position:relative;
     padding: 1%;
   }
+
   @media screen and (min-width: 920px) {
     .container .card {
       display:flex;
@@ -531,9 +552,8 @@
       width: 200px;
       margin-bottom: 20px;
     }
-    
   }
-  
+        
   .image img {
     height: 100%;
     width: 100%;
@@ -541,6 +561,7 @@
     border-radius: 50%;
     border: 5px solid #6d0000;
   }
+
   .card h2 {
     margin-top: 25px;
     color: #333;
@@ -549,6 +570,7 @@
     padding: 1%;
     margin:1%;
   }
+
   .card .tag-container {
     position: relative;
     width: fit-content;
@@ -556,10 +578,9 @@
     display: flex;
     flex-direction: row;
     margin-top: 1%;
-  
   }
+
   .card h5 {
-    
     color: #fff;
     font-weight: 800;
     background-color: #6d0000;
@@ -579,3 +600,4 @@
     padding: 1%;
     margin:1%;
   }
+}
