--- a/scss/pages/index-style.css
+++ b/scss/pages/index-style.css
@@ -58,6 +58,12 @@
     border-radius: 5px;
   }
 }
+.hero-text p {
+  font-size: 20px;
+  margin: 0;
+  padding: 0;
+}
+
 .bio-text {
   height: auto;
   width: 100%;
@@ -83,50 +89,41 @@
   position: relative;
 }
 
-.whatsapp-button {
-  background-color: #25D366;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 1rem;
-  font-weight: 400;
-  width: -moz-fit-content;
-  width: fit-content;
-  display: flex;
-  margin: 1%;
-  padding: 1%;
-  position: relative;
-  transition: background-color 0.3s, color 0.3s;
+/*.whatsapp-button {
+    background-color: #25D366;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: 400;
+    width:fit-content;
+    display: flex;
+    margin: 1%;
+    padding: 1%;
+    position: relative;
+    transition: background-color 0.3s, color 0.3s;
 }
-
-.whatsapp-button:hover {
-  background-color: #128C7E;
-  color: white;
-}
-
+    .whatsapp-button:hover {
+        background-color: #128C7E;
+        color: white;
+    }*/
 .hero-img img {
   width: 100%;
   height: auto;
   border-radius: 5px;
 }
 
-.hero-text p {
-  font-size: 20px;
-  margin: 0;
-  padding: 0;
-}
-
 .wrap-button-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
-  text-align: center;
+  align-items: flex-start;
+  position: relative;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .wrap-button-container {
     flex-direction: column;
     align-items: center;
