CV Style updated

--- a/scss/pages/CV-Style.scss
+++ b/scss/pages/CV-Style.scss
@@ -1,6 +1,6 @@
 @use '/scss/partials/header';
 @use '/scss/partials/body';
-@use '/scss/partials/footer.scss';
+@use '/scss/partials/footer';
 
 
 .CV-hero-container {
