--- a/scss/pages/index-style.css
+++ b/scss/pages/index-style.css
@@ -1,4 +1,4 @@
-.wrap-title-portrait {
+.index .wrap-title-portrait {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -6,8 +6,7 @@
   text-align: center;
   margin-top: 10%;
 }
-
-.portrait {
+.index .portrait {
   width: 100%;
   height: auto;
   border-radius: 5px;
@@ -19,8 +18,7 @@
   margin: 1%;
   padding: 1%;
 }
-
-.title-container {
+.index .title-container {
   color: #a7a8a7;
   height: auto;
   width: auto;
@@ -34,16 +32,14 @@
   text-align: left;
   border-radius: 5px;
 }
-
-.title-container h1 {
+.index .title-container h1 {
   font-size: 30px;
   margin: 0;
   padding: 0;
   color: #a7a8a7;
 }
-
 @media screen and (max-width: 510px) {
-  .title-container {
+  .index .title-container {
     color: #a7a8a7;
     height: auto;
     width: auto;
@@ -58,13 +54,12 @@
     border-radius: 5px;
   }
 }
-.hero-text p {
+.index .hero-text p {
   font-size: 20px;
   margin: 0;
   padding: 0;
 }
-
-.bio-text {
+.index .bio-text {
   height: auto;
   width: 100%;
   margin: 1%;
@@ -75,8 +70,7 @@
   align-items: end;
   border-radius: 5px;
 }
-
-.hero-img {
+.index .hero-img {
   width: 60%;
   height: auto;
   border-radius: 5px;
@@ -88,54 +82,31 @@
   padding: 1%;
   position: relative;
 }
-
-/*.whatsapp-button {
-    background-color: #25D366;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 1rem;
-    font-weight: 400;
-    width:fit-content;
-    display: flex;
-    margin: 1%;
-    padding: 1%;
-    position: relative;
-    transition: background-color 0.3s, color 0.3s;
-}
-    .whatsapp-button:hover {
-        background-color: #128C7E;
-        color: white;
-    }*/
-.hero-img img {
+.index .hero-img img {
   width: 100%;
   height: auto;
   border-radius: 5px;
 }
-
-.wrap-button-container {
+.index .wrap-button-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: flex-start;
   position: relative;
 }
-
 @media screen and (min-width: 768px) {
-  .wrap-button-container {
+  .index .wrap-button-container {
     flex-direction: column;
     align-items: center;
   }
-  .hero-img {
+  .index .hero-img {
     width: 100%;
   }
-  .hero-text p {
+  .index .hero-text p {
     font-size: 16px;
   }
 }
-.go-to-button {
+.index .go-to-button {
   background-color: #a7a8a7;
   border: solid 1px #6d0000;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
@@ -152,12 +123,10 @@
   position: relative;
   transition: background-color 0.3s, color 0.3s;
 }
-
-.go-to-button:hover {
+.index .go-to-button:hover {
   background-color: #373c37;
   color: #a7a8a7 !important;
 }
-
-.logo-button:hover {
+.index .logo-button:hover {
   color: #a7a8a7 !important;
 }/*# sourceMappingURL=index-style.css.map */
