--- a/scss/pages/index-style.css
+++ b/scss/pages/index-style.css
@@ -90,7 +90,6 @@
 .index .wrap-button-container {
   display: flex;
   flex-direction: row;
-  justify-content: center;
   align-items: flex-start;
   position: relative;
 }
@@ -106,7 +105,7 @@
     font-size: 16px;
   }
 }
-.index .go-to-button {
+.index .CV-go-to-button {
   background-color: #a7a8a7;
   border: solid 1px #6d0000;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
@@ -117,16 +116,33 @@
   font-weight: 400;
   width: -moz-fit-content;
   width: fit-content;
-  display: block;
+  display: flex;
+  flex-direction: row;
   margin: 1%;
   padding: 1%;
-  position: relative;
   transition: background-color 0.3s, color 0.3s;
 }
-.index .go-to-button:hover {
+.index .CV-go-to-button:hover {
   background-color: #373c37;
   color: #a7a8a7 !important;
 }
 .index .logo-button:hover {
   color: #a7a8a7 !important;
+}
+.index .contact-go-to-button {
+  background-color: #a7a8a7;
+  border: solid 1px #6d0000;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  color: #801023;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: 400;
+  width: -moz-fit-content;
+  width: fit-content;
+  display: flex;
+  flex-direction: row;
+  margin: 1%;
+  padding: 1%;
+  transition: background-color 0.3s, color 0.3s;
 }/*# sourceMappingURL=index-style.css.map */
