Index.html + variables colors updated

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,9 +2,9 @@
 $font-primary: 'Montserrat', sans-serif;
 $font-secondary: 'Lobster', cursive;
 $color-text: #333333;
-$color-background: #f9f9f9;
-$color-primary: #3498db;
-$color-dark: #2c3e50;
+$color-background: #212121;
+$color-primary: #cd0000;
+$color-dark: #a7a8a7;
 $color-light-gray: #ecf0f1;
 $color-white: #ffffff;
 $border-color: #dddddd;
